--- a/relatorio_parcial.ipynb
+++ b/relatorio_parcial.ipynb
@@ -10,81 +10,116 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.7.9-final"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python3",
+   "display_name": "Python 3.7.9 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "4716475fc5597343ad2da5ac04705eed59773d7c903e3c421f67beef8b3526b2"
+    }
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
  "cells": [
   {
    "source": [
-    "## Descrição da identificação (cópia da seção 3.4.2)\n",
+    "Para o relatório parcial na foi necessário ser feita a reprodução do método de identificação proposto no trabalho da Carolina para o modelo MP.\n",
     "\n",
-    "Como forma de contornar as limitações da identificação tradicional descrita pela\n",
-    "Seção 3.4.1, este trabalho propõe uma nova abordagem para obtenção dos valores a serem\n",
-    "inseridos na LUTs. A proposta é obter diretamente estes valores, sem conhecimento prévio\n",
-    "dos coeficientes das funções polinomiais unidimensionais. Assim sendo, neste caso os\n",
-    "(Q)(M+1) valores complexos à serem inseridos nas (M+1) LUTs são obtidos diretamente\n",
-    "através do MMQ, de acordo com:\n",
+    "## Modelo MP:\n",
     "\n",
     "\\begin{equation}\n",
-    "s = (X^*_{LUT}X_{LUT} )^{−1}(X^*_{LUT}Y )\n",
-    "\\end{equation}\n",
-    "\n",
-    "onde, o operador (*) indica o operador transposto complexo conjugado, e:\n",
-    "\n",
-    "\\begin{equation}\n",
-    "s =\n",
-    "\\begin{bmatrix}\n",
-    "\\tilde{s}_{01} \\\\ \\vdots \\\\ \\tilde{s}_{0Q} \\\\ \\vdots \\\\ \\tilde{s}_{M1} \\\\ \\vdots \\\\ \\tilde{s}_{MQ}\n",
-    "\\end{bmatrix}\n",
-    "\\end{equation}\n",
-    "\n",
-    "A matriz $X_{LUT}$ depende das informações de entrada do sistema. A quantidade de valores complexos a serem inseridos nas LUTs é igual ao número (M + 1)(Q) de colunas da matriz XLUT . Cada uma das linhas de $X_{LUT}$ tem exatamente 2(M + 1) colunas com informações que podem ser diferentes de zero, ou seja, cada linha de $X_{LUT}$ tem (M + 1)(Q) − 2(M + 1) colunas preenchidas com valores nulos. Se as colunas forem organizadas em blocos com Q colunas cada um, então existem (M + 1) blocos e, para cada bloco, somente duas colunas podem ter valores não nulos. O preenchimento dos valores não nulos da matriz XLUT é feito separadamente para cada bloco com uma linha e Q colunas, assim sendo, dois valores não nulos são preenchidos por vez. Para cada linha, existem (M + 1) blocos de Q colunas e, no total, a matriz XLUT contém (n − M) linhas. Portanto, ao todo, a matriz $X_{LUT}$ conta com 2(M + 1)(n − M) valores não nulos. Em blocos de uma linha e Q colunas, a matriz $X_{LUT}$ é representada por:\n",
-    "\n",
-    "\\begin{equation}\n",
-    "\\begin{bmatrix}\n",
-    "1blocodeQcolunasdalinha1 & 2blocodeQcolunasdalinha1 & \\dots & (M+1)-ésimoblocodeQcolunasdalinha1 \\\\\n",
-    " & \\vdots & & \\\\\n",
-    "1blocodeQcolunasdalinha(n-M) & 2blocodeQcolunasdalinha(n-M) & \\dots & (M+1)-ésimoblocodeQcolunasdalinha(n-M)\n",
-    "\\end{bmatrix}\n",
-    "\\end{equation}\n",
-    "\n",
-    "\n",
-    "Cada bloco de uma linha e Q colunas deve conter os resultados dos produtos do operador Gm do modelo e a saída interpolada de uma determinada LUT, por exemplo, $f^{pol}_{m}(|\\tilde{x}(n-m)|)$ ou seja:\n",
-    "\n",
-    "\n",
-    "\\begin{equation}\n",
-    "X_{LUT}=\n",
-    "\\begin{bmatrix}\n",
-    "G_{0}f^{LUT}_{0}(|\\tilde{x}(1+M)|) & G_{1}f^{LUT}_{1}(|\\tilde{x}(M)|) & \\dots & G_{M}f^{LUT}_{M}(|\\tilde{x}(1)|) \\\\\n",
-    " & \\vdots & & \\\\\n",
-    "G_{0}f^{LUT}_{0}(|\\tilde{x}(n)|) & G_{1}f^{LUT}_{1}(|\\tilde{x}(n-1)|) & \\dots & G_{M}f^{LUT}_{M}(|\\tilde{x}(n-M)|)\n",
-    "\\end{bmatrix}\n",
-    "\\end{equation}\n",
-    "\n",
-    "\n",
-    "A partir de 3.9, é possível verificar que a saída interpolada de uma determinada LUT depende somente das informações contidas em duas posições consecutivas da LUT. Logo, os valores a serem inseridos em um determinado bloco de uma linha e Q colunas que utilizem a saída interpolada da LUT $f^{LUT}_{m}(|\\tilde{x}(n-m)|)$ para estimar a saída no instantes $n$ devem satisfazer a seguinte condição: $e_{m(q−1)} <| \\tilde{x}(n − m) |< e_{mq}$, com q variando entre 2 e Q. Assim sendo, o valor na $(q − 1)_{ésima}$ posição deste bloco pode ser descrito por:\n",
-    "\n",
-    "\\begin{equation}\n",
-    "\n",
-    "Valor_{(q-1)ésimacoluna} = G_m \\left[ 1 - \\frac{[|\\tilde{x}(n − m)|-e_{m(q-1)}]}{e_{m(q)}-e_{m(q-1)}}  \\right]\n",
-    "\n",
-    "\\end{equation}\n",
-    "\n",
-    "já o valor a ser inserido na $q_{ésima}$ posição deste bloco pode ser descrito por:\n",
-    "\n",
-    "\n",
-    "\\begin{equation}\n",
-    "\n",
-    "Valor_{(q)ésimacoluna} = G_m \\left[\\frac{[|\\tilde{x}(n − m)|-e_{m(q-1)}]}{e_{m(q)}-e_{m(q-1)}}  \\right]\n",
-    "\n",
-    "\\end{equation}\n",
-    "\n"
+    "\\tilde{y}(n) = \\sum^P_{p=1}\\sum^M_{m=0} \\tilde{b}_{mp} \\tilde{x}(n-m) |\\tilde{x}(n-m)|^{p-1} \n",
+    "\\end{equation}\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# IMPORTAÇÃO DAS BIBLIOTECAS E DADOS\n",
+    "\n",
+    "import scipy.io as spio\n",
+    "import scipy as sp\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\n",
+    "mat = spio.loadmat('data_LDMOS.mat')\n",
+    "in_ext = mat['in_extraction']\n",
+    "out_ext = mat['out_extraction']\n",
+    "in_val = mat['in_validation']\n",
+    "out_val = mat['out_validation']"
+   ]
+  },
+  {
+   "source": [
+    "\\begin{equation}\n",
+    "f^{pol}_{m}(|\\tilde{x}(n-m)|)~f^{LUT}_{m}(|\\tilde{x}(n-m)|) = \\tilde{s}_{m(q-1)} + \\left[ \\frac{\\tilde{s}_{m(q)} - \\tilde{s}_{m(q-1)}}{e_{m(q)} - e_{m(q-1)}} \\right] [|\\tilde{x}(n-m)| - e_{m(q-1)}]\n",
+    "\\end{equation}"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[ 0.06874848, -0.02982907],\n",
+       "       [-0.04522785,  0.22038117],\n",
+       "       [-0.08282102, -0.18595306],\n",
+       "       [ 0.0849741 , -0.34643166]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 85
+    }
+   ],
+   "source": [
+    "# DEFINIÇÃO DOS PARÂMETROS DO MODELO\n",
+    "P = 3\n",
+    "M = 1\n",
+    "n = 2\n",
+    "\n",
+    "# DEFINIÇÃO DOS VALORES DE ENTRADA E SAÍDA DAS LUTS\n",
+    "def saida_lut(entrada,M,n):\n",
+    "    entrada_m = zeros((len(entrada),M+1))\n",
+    "    Q = 2**n\n",
+    "    z=np.linspace(0,1,Q)\n",
+    "    z = [int(round(a*(len(entrada)-1))) for a in z]  \n",
+    "    s_lut = np.zeros((Q))\n",
+    "    \n",
+    "\n",
+    "    s_lut = np.zeros((Q,2))\n",
+    "\n",
+    "    for r in range(Q):\n",
+    "        s_lut[r,0] = np.real(entrada[z[r]])\n",
+    "        s_lut[r,1] = np.imag(entrada[z[r]])\n",
+    "\n",
+    "    return s_lut\n",
+    "s_lut = saida_lut(in_ext,M,n)\n",
+    "s_lut"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
