--- a/relatorio_parcial.ipynb
+++ b/relatorio_parcial.ipynb
@@ -41,19 +41,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
     "# IMPORTAÇÃO DAS BIBLIOTECAS E DADOS\n",
     "\n",
-    "import scipy.io as spio\n",
-    "import scipy as sp\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
+    "from scipy.io import *\n",
+    "from scipy import *\n",
+    "from numpy import *\n",
+    "from matplotlib.pyplot import *\n",
     "\n",
     "\n",
-    "mat = spio.loadmat('data_LDMOS.mat')\n",
+    "mat = loadmat('data_LDMOS.mat')\n",
     "in_ext = mat['in_extraction']\n",
     "out_ext = mat['out_extraction']\n",
     "in_val = mat['in_validation']\n",
@@ -63,55 +63,113 @@
   {
    "source": [
     "\\begin{equation}\n",
-    "f^{pol}_{m}(|\\tilde{x}(n-m)|)~f^{LUT}_{m}(|\\tilde{x}(n-m)|) = \\tilde{s}_{m(q-1)} + \\left[ \\frac{\\tilde{s}_{m(q)} - \\tilde{s}_{m(q-1)}}{e_{m(q)} - e_{m(q-1)}} \\right] [|\\tilde{x}(n-m)| - e_{m(q-1)}]\n",
-    "\\end{equation}"
+    "\n",
+    "    X_{LUT} = \n",
+    "    \\begin{bmatrix}\n",
+    "        1blocodeQcolunasdalinha1 & 2blocodeQcolunasdalinha1 & \\dots & (M+1)-ésimoblocodeQcolunasdalinha1\\\\\n",
+    "         & \\vdots & & \\\\\n",
+    "        1blocodeQcolunasdalinha(n-M) & 2blocodeQcolunasdalinha(n-M) & \\dots & (M+1)-ésimoblocodeQcolunasdalinha(n-M)\\\\\n",
+    "    \\end{bmatrix}  \n",
+    "    \n",
+    "    \n",
+    "\\end{equation}\n",
+    "\n",
+    "\n",
+    "\n",
+    "\\begin{equation} \n",
+    "    X_{LUT} = \n",
+    "    \\begin{bmatrix}\n",
+    "    \\tilde{x}(1+M) f_0^{LUT}(|\\tilde{x}(1+M)|) & \\tilde{x}(M) f_1^{LUT}(|\\tilde{x}(M)|) & \\dots &  \\tilde{x}(1) f_M^{LUT}(|\\tilde{x}(1)|)\\\\\n",
+    "     & \\vdots & & \\\\\n",
+    "    \\tilde{x}(n) f_0^{LUT}(|\\tilde{x}(n)|) & \\tilde{x}(n-1) f_1^{LUT}(|\\tilde{x}(n-1)|) & \\dots &  \\tilde{x}(n-M) f_M^{LUT}(|\\tilde{x}(n-M)|)\n",
+    "    \\end{bmatrix}\n",
+    "\\end{equation}\n",
+    "\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    Valor_{(q-1)_{esimacoluna}} = \\tilde{x}(n-m) \\left[ 1 - \\frac{[|\\tilde{x}(n-m)| - e_{m(q-1)}]}{e_{m(q)} - e_{m(q-1)}} \\right]\n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    Valor_{(q)_{esimacoluna}} = \\tilde{x}(n-m) \\left[ \\frac{[|\\tilde{x}(n-m)| - e_{m(q-1)}]}{e_{m(q)} - e_{m(q-1)}} \\right]\n",
+    "\\end{equation}\n",
+    "\n",
+    "\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    s = (X_{LUT}^* X_{LUT})^{-1} (X_{LUT}^* Y) =\n",
+    "    \\begin{bmatrix}\n",
+    "    \\tilde{s}_{01} \\\\\n",
+    "    \\vdots \\\\\n",
+    "    \\tilde{s}_{0Q} \\\\\n",
+    "    \\vdots \\\\\n",
+    "    \\tilde{s}_{M1} \\\\\n",
+    "    \\vdots \\\\\n",
+    "    \\tilde{s}_{MQ}\n",
+    "    \\end{bmatrix}\n",
+    "\\end{equation}\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 229,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "array([[ 0.06874848, -0.02982907],\n",
-       "       [-0.04522785,  0.22038117],\n",
-       "       [-0.08282102, -0.18595306],\n",
-       "       [ 0.0849741 , -0.34643166]])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 85
-    }
-   ],
+   "outputs": [],
    "source": [
     "# DEFINIÇÃO DOS PARÂMETROS DO MODELO\n",
     "P = 3\n",
-    "M = 1\n",
+    "M = 2\n",
+    "\n",
+    "# n é o parâmetro que define o valor de Q (número de entradas da LUT), sendo Q=2^n\n",
     "n = 2\n",
     "\n",
-    "# DEFINIÇÃO DOS VALORES DE ENTRADA E SAÍDA DAS LUTS\n",
-    "def saida_lut(entrada,M,n):\n",
-    "    entrada_m = zeros((len(entrada),M+1))\n",
+    "# DEFINIÇÃO DO VETOR DE ENTRADA DAS LUTs\n",
+    "e_lut = linspace(0,1,2**n)\n",
+    "\n",
+    "\n",
+    "# DEFINIÇÂO DAS MATRIZES CONTENDO OS VALORES DE x(n-m) e |x(n-m)|\n",
+    "def x_n_m(entrada, M, P):\n",
+    "    x_nm = empty((len(entrada),(M+1)),dtype=complex)\n",
+    "    for r in range(M+1,len(entrada)):\n",
+    "        for m in range(0,M+1,1):\n",
+    "            x_nm[r,m] = entrada[r-m]\n",
+    "    return x_nm\n",
+    "\n",
+    "x_nm  = x_n_m(in_ext,M,P)\n",
+    "abs_x_nm = abs(x_nm)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def xlut(e_lut, x_nm, abs_x_nm, M, n):\n",
     "    Q = 2**n\n",
-    "    z=np.linspace(0,1,Q)\n",
-    "    z = [int(round(a*(len(entrada)-1))) for a in z]  \n",
-    "    s_lut = np.zeros((Q))\n",
-    "    \n",
+    "    x_lut = empty((len(x_nm),Q),dtype = \"complex_\")\n",
+    "    for r in range(len(x_nm)):\n",
+    "        for c in range(1,Q,2):\n",
+    "            x_lut[r,c] = x_nm[r,0] * ((abs_x_nm[r,0] - e_lut[c-1])/((e_lut[c] - e_lut[c-1])))\n",
+    "            x_lut[r,c-1] = x_nm[r,0] * (1 - ((abs_x_nm[r,0] - e_lut[c-1])/((e_lut[c] - e_lut[c-1]))))\n",
     "\n",
-    "    s_lut = np.zeros((Q,2))\n",
+    "    if M>=1:\n",
+    "        for m in range(1, M+1):\n",
     "\n",
-    "    for r in range(Q):\n",
-    "        s_lut[r,0] = np.real(entrada[z[r]])\n",
-    "        s_lut[r,1] = np.imag(entrada[z[r]])\n",
+    "            x_lut_temp = empty((len(x_nm),Q),dtype = \"complex_\")\n",
+    "            for r in range(len(x_nm)):\n",
+    "                for c in range(1,Q,2):\n",
+    "                            x_lut_temp[r,c] = x_nm[r,m] * ((abs_x_nm[r,m] - e_lut[c-1])/((e_lut[c] - e_lut[c-1])))\n",
+    "                            x_lut_temp[r,c-1] = x_nm[r,m] * (1 - ((abs_x_nm[r,m] - e_lut[c-1])/((e_lut[c] - e_lut[c-1]))))\n",
     "\n",
-    "    return s_lut\n",
-    "s_lut = saida_lut(in_ext,M,n)\n",
-    "s_lut"
+    "            x_lut = concatenate((x_lut,x_lut_temp), axis=1)                 \n",
+    "    return x_lut\n",
+    "\n",
+    "x_lut = xlut(e_lut, x_nm, abs_x_nm, M, n)"
    ]
   },
   {
