--- a/relatorio_parcial.ipynb
+++ b/relatorio_parcial.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,13 +137,13 @@
     "            x_nm[r,m] = entrada[r-m]\n",
     "    return x_nm\n",
     "\n",
-    "x_nm  = x_n_m(in_ext,M,P)\n",
+    "x_nm  = x_n_m(in_ext,M,P)[M+1:-1,:]\n",
     "abs_x_nm = abs(x_nm)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 59,
    "metadata": {
     "tags": []
    },
@@ -174,10 +174,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[ 6.03016494e+14, -2.57937997e+13,  3.02952709e+14,\n",
+       "        -9.49077481e+12, -2.88892299e+12, -6.81225005e+12],\n",
+       "       [ 6.03016494e+14, -2.57937997e+13,  3.02952709e+14,\n",
+       "        -9.49077481e+12, -2.88892299e+12, -6.81225005e+12],\n",
+       "       [ 6.03016494e+14, -2.57937997e+13,  3.02952709e+14,\n",
+       "        -9.49077481e+12, -2.88892299e+12, -6.81225005e+12],\n",
+       "       [ 6.03016494e+14, -2.57937997e+13,  3.02952709e+14,\n",
+       "        -9.49077481e+12, -2.88892299e+12, -6.81225005e+12]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 67
+    }
+   ],
+   "source": [
+    "x1 = asmatrix(x_lut).H\n",
+    "s_lut = asmatrix(x1@x_lut).I@(x1@out_ext[M+1:-1,:])\n",
+    "\n",
+    "lut = empty((int(len(s_lut)/(M+1)), 2*(M+1)))\n",
+    "rl = -1\n",
+    "for c in range(1,2*(M+1),2):\n",
+    "    rl+=1\n",
+    "    for r in range(2**n):\n",
+    "        lut[r,c] = imag(s_lut[rl])\n",
+    "        lut[r,c-1] = real(s_lut[rl])\n",
+    "lut"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def interpolacao(entrada,lut,M,n):\n",
+    "    Q = 2**n\n",
+    "    z = np.linspace(0,1,Q) \n",
+    "    abs_in = np.abs(entrada)\n",
+    "    abs_in = abs_in[M+1:-1,:]\n",
+    "    inter = np.interp(abs_in,z,lut[:,0])\n",
+    "    for c in range(1,2*(M+1)):\n",
+    "        inter2 = np.interp(abs_in,z,lut[:,c])\n",
+    "        inter = np.append(inter,inter2,axis=1)\n",
+    "    \n",
+    "    real = np.zeros((len(inter),1))\n",
+    "    imag = np.zeros((len(inter),1))\n",
+    "    for c in range(0,2*(M+1),2):\n",
+    "        real = np.add(real,inter[:,c].reshape(len(inter),1))\n",
+    "        imag = np.add(imag,inter[:,c+1].reshape(len(inter),1))\n",
+    "    interpol = real + (imag * 1j)\n",
+    "    return interpol"
+   ]
   }
  ]
 }
