--- a/relatorio_parcial.ipynb
+++ b/relatorio_parcial.ipynb
@@ -114,16 +114,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
     "# DEFINIÇÃO DOS PARÂMETROS DO MODELO\n",
-    "P = 3\n",
+    "P = 5\n",
     "M = 2\n",
     "\n",
     "# n é o parâmetro que define o valor de Q (número de entradas da LUT), sendo Q=2^n\n",
-    "n = 2\n",
+    "n = 1\n",
     "\n",
     "# DEFINIÇÃO DO VETOR DE ENTRADA DAS LUTs\n",
     "e_lut = linspace(0,1,2**n)\n",
@@ -143,75 +143,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 247,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[0.02452544-0.21704066j, 0.01166367-0.10321899j,\n",
+       "        0.03309099-0.17495131j, 0.0099834 -0.05278202j,\n",
+       "        0.047343  -0.10958357j, 0.00761603-0.01762861j],\n",
+       "       [0.02254974-0.2380096j , 0.01475211-0.15570664j,\n",
+       "        0.02452544-0.21704066j, 0.01166367-0.10321899j,\n",
+       "        0.03309099-0.17495131j, 0.0099834 -0.05278202j],\n",
+       "       [0.0272328 -0.24503633j, 0.02150343-0.19348438j,\n",
+       "        0.02254974-0.2380096j , 0.01475211-0.15570664j,\n",
+       "        0.02452544-0.21704066j, 0.01166367-0.10321899j],\n",
+       "       ...,\n",
+       "       [0.02194483-0.19063959j, 0.00766863-0.06661903j,\n",
+       "        0.02432916-0.17144672j, 0.00697475-0.04915078j,\n",
+       "        0.03517417-0.15074186j, 0.00832811-0.03569083j],\n",
+       "       [0.02714023-0.20651418j, 0.01139862-0.08673385j,\n",
+       "        0.02194483-0.19063959j, 0.00766863-0.06661903j,\n",
+       "        0.02432916-0.17144672j, 0.00697475-0.04915078j],\n",
+       "       [0.03849435-0.21755455j, 0.01891811-0.10691751j,\n",
+       "        0.02714023-0.20651418j, 0.01139862-0.08673385j,\n",
+       "        0.02194483-0.19063959j, 0.00766863-0.06661903j]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 247
+    }
+   ],
    "source": [
     "def xlut(e_lut, x_nm, abs_x_nm, M, n):\n",
     "    Q = 2**n\n",
-    "    x_lut = empty((len(x_nm),Q),dtype = \"complex_\")\n",
+    "    x_lut = zeros((len(x_nm),Q),dtype = \"complex_\")\n",
     "    for r in range(len(x_nm)):\n",
     "        for c in range(1,Q,2):\n",
-    "            x_lut[r,c] = x_nm[r,0] * ((abs_x_nm[r,0] - e_lut[c-1])/((e_lut[c] - e_lut[c-1])))\n",
-    "            x_lut[r,c-1] = x_nm[r,0] * (1 - ((abs_x_nm[r,0] - e_lut[c-1])/((e_lut[c] - e_lut[c-1]))))\n",
+    "            if e_lut[c-1] <= abs_x_nm[r,0] <= e_lut[c]:\n",
+    "                x_lut[r,c] = x_nm[r,0] * ((abs_x_nm[r,0] - e_lut[c-1])/((e_lut[c] - e_lut[c-1])))\n",
+    "                x_lut[r,c-1] = x_nm[r,0] * (1 - ((abs_x_nm[r,0] - e_lut[c-1])/((e_lut[c] - e_lut[c-1]))))\n",
     "\n",
     "    if M>=1:\n",
     "        for m in range(1, M+1):\n",
     "\n",
-    "            x_lut_temp = empty((len(x_nm),Q),dtype = \"complex_\")\n",
+    "            x_lut_temp = zeros((len(x_nm),Q),dtype = \"complex_\")\n",
     "            for r in range(len(x_nm)):\n",
     "                for c in range(1,Q,2):\n",
-    "                            x_lut_temp[r,c] = x_nm[r,m] * ((abs_x_nm[r,m] - e_lut[c-1])/((e_lut[c] - e_lut[c-1])))\n",
-    "                            x_lut_temp[r,c-1] = x_nm[r,m] * (1 - ((abs_x_nm[r,m] - e_lut[c-1])/((e_lut[c] - e_lut[c-1]))))\n",
+    "                    if e_lut[c-1] <= abs_x_nm[r,m] <= e_lut[c]:\n",
+    "                        x_lut_temp[r,c] = x_nm[r,m] * ((abs_x_nm[r,m] - e_lut[c-1])/((e_lut[c] - e_lut[c-1])))\n",
+    "                        x_lut_temp[r,c-1] = x_nm[r,m] * (1 - ((abs_x_nm[r,m] - e_lut[c-1])/((e_lut[c] - e_lut[c-1]))))\n",
     "\n",
     "            x_lut = concatenate((x_lut,x_lut_temp), axis=1)                 \n",
     "    return x_lut\n",
     "\n",
-    "x_lut = xlut(e_lut, x_nm, abs_x_nm, M, n)"
+    "x_lut = xlut(e_lut, x_nm, abs_x_nm, M, n)\n",
+    "x_lut"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([[ 6.03016494e+14, -2.57937997e+13,  3.02952709e+14,\n",
-       "        -9.49077481e+12, -2.88892299e+12, -6.81225005e+12],\n",
-       "       [ 6.03016494e+14, -2.57937997e+13,  3.02952709e+14,\n",
-       "        -9.49077481e+12, -2.88892299e+12, -6.81225005e+12],\n",
-       "       [ 6.03016494e+14, -2.57937997e+13,  3.02952709e+14,\n",
-       "        -9.49077481e+12, -2.88892299e+12, -6.81225005e+12],\n",
-       "       [ 6.03016494e+14, -2.57937997e+13,  3.02952709e+14,\n",
-       "        -9.49077481e+12, -2.88892299e+12, -6.81225005e+12]])"
+       "array([[ 1.11720139,  0.06746139, -0.03581887, -0.01435655, -0.01774943,\n",
+       "         0.00814816],\n",
+       "       [ 0.70252877, -0.08186121,  0.31861196, -0.02379433, -0.12042486,\n",
+       "        -0.00615358]])"
       ]
      },
      "metadata": {},
-     "execution_count": 67
+     "execution_count": 248
     }
    ],
    "source": [
     "x1 = asmatrix(x_lut).H\n",
-    "s_lut = asmatrix(x1@x_lut).I@(x1@out_ext[M+1:-1,:])\n",
+    "s_lut = asmatrix(x1@x_lut).I@asmatrix(x1@out_ext[M+1:-1,:])\n",
     "\n",
     "lut = empty((int(len(s_lut)/(M+1)), 2*(M+1)))\n",
-    "rl = -1\n",
+    "rl = 0\n",
     "for c in range(1,2*(M+1),2):\n",
-    "    rl+=1\n",
     "    for r in range(2**n):\n",
     "        lut[r,c] = imag(s_lut[rl])\n",
     "        lut[r,c-1] = real(s_lut[rl])\n",
+    "        rl+=1\n",
     "lut"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +259,37 @@
     "        real = np.add(real,inter[:,c].reshape(len(inter),1))\n",
     "        imag = np.add(imag,inter[:,c+1].reshape(len(inter),1))\n",
     "    interpol = real + (imag * 1j)\n",
-    "    return interpol"
+    "    return interpol\n",
+    "\n",
+    "inter = interpolacao(in_val,lut,M,n)\n",
+    "in_val_lut = in_val[M+1:-1,:]\n",
+    "out_val_lut = out_val[M+1:-1,:]\n",
+    "out_lut = inter*in_val_lut"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "-31.38759849608664\n"
+     ]
+    }
+   ],
+   "source": [
+    "def NMSE(previsao,validacao):\n",
+    "    erro = validacao - previsao\n",
+    "    erro = np.sum(np.absolute(erro)**2)\n",
+    "    val = np.sum(np.absolute(validacao)**2)\n",
+    "    res = 10*np.log10(erro/val)\n",
+    "    return res\n",
+    "\n",
+    "NMSE_lut = NMSE(out_lut,out_val_lut)\n",
+    "print(NMSE_lut)"
    ]
   }
  ]
