--- a/identificacao_carolina.ipynb
+++ b/identificacao_carolina.ipynb
@@ -239,7 +239,7 @@
   },
   {
    "source": [
-    "## Interpolação\n",
+    "## Interpolação e validação\n",
     "\n",
     "A partir desse ponto eu reaproveitei o código da IC anterior. Deixei a matriz da célula anterior no mesmo formato que utilizei no meu último trabalho para usar a mesma função de interpolação. Essa parte eu não me recordo 100% como foi implementada, portanto ainda preciso revisar."
    ],
@@ -278,6 +278,8 @@
   },
   {
    "source": [
+    "## Resultados\n",
+    "\n",
     "A célula anterior já calcula a saída do modelo. Para finalizar só resta aplicar o NMSE:"
    ],
    "cell_type": "markdown",
