--- a/identificacao_carolina.ipynb
+++ b/identificacao_carolina.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 26,
    "metadata": {
     "tags": []
    },
@@ -215,15 +215,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "def slut(x_lut, out_ext, M, n):\n",
     "    # A propriedade de matrizes .H do Numpy aplica o operador transposto complexo conjugado. A propriedade .I representa a matriz inversa.\n",
-    "    x1 = asmatrix(x_lut).H\n",
-    "    s_lut = asmatrix(x1@x_lut).I@asmatrix(x1@out_ext[M+1:-1,:])\n",
-    "\n",
+    "    #x1 = asmatrix(x_lut).H\n",
+    "    #s_lut = asmatrix(x1@x_lut).I@asmatrix(x1@out_ext[M+1:-1,:])\n",
+    "    s_lut = linalg.lstsq(x_lut,out_ext[M+1:-1,:], rcond=-1)\n",
+    "    s_lut = s_lut[0]\n",
     "    # Transformação do vetor s_lut em uma matriz de números reais.\n",
     "    lut = empty((int(len(s_lut)/(M+1)), 2*(M+1)))\n",
     "    rl = 0\n",
@@ -248,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,14 +288,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "-31.403665178185562\n"
+      "-31.403665178186145\n"
      ]
     }
    ],
@@ -319,16 +320,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "def identificacao_carolina(in_ext,out_ext,in_val,out_val,M,n):\n",
     "    e_lut = linspace(0,1,2**n)\n",
+    "    print(f'in_ext (dados de entrada x): \\n {in_ext} \\n')\n",
     "    x_nm  = x_n_m(in_ext,M)[M+1:-1,:]\n",
+    "    print(f'x_nm: \\n {x_nm} \\n')\n",
     "    abs_x_nm = abs(x_nm)\n",
     "    x_lut = xlut(e_lut, x_nm, abs_x_nm, M, n)\n",
+    "    print(f'X_lut: \\n {x_lut} \\n')\n",
     "    s_lut = slut(x_lut, out_ext, M, n)\n",
+    "    print(f\"Formato de s_lut (deve ser (2^n,2*(M+1)): {s_lut.shape} \\n\")\n",
     "    inter = interpolacao(in_val,s_lut,M,n)\n",
     "    in_val_lut = in_val[M+1:-1,:]\n",
     "    out_val_lut = out_val[M+1:-1,:]\n",
@@ -339,48 +344,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Para M=0 e n=1 -> NMSE=-31.469181228314504\n",
-      "Para M=0 e n=2 -> NMSE=-33.03213895105498\n",
-      "Para M=0 e n=3 -> NMSE=-35.05884472712828\n",
-      "Para M=0 e n=4 -> NMSE=-35.17386937211664\n",
-      "Para M=1 e n=1 -> NMSE=-31.416260557357766\n",
-      "Para M=1 e n=2 -> NMSE=-14.349768236497916\n",
-      "Para M=1 e n=3 -> NMSE=-13.141703441250138\n",
-      "Para M=1 e n=4 -> NMSE=-10.176046146191284\n",
-      "Para M=2 e n=1 -> NMSE=-31.403665178185562\n",
-      "Para M=2 e n=2 -> NMSE=-9.43748505748752\n",
-      "Para M=2 e n=3 -> NMSE=-8.363051250840494\n",
-      "Para M=2 e n=4 -> NMSE=-6.822553732507686\n",
-      "Para M=3 e n=1 -> NMSE=-31.319844849446554\n",
-      "Para M=3 e n=2 -> NMSE=-6.51754891959441\n",
-      "Para M=3 e n=3 -> NMSE=-6.678221614549652\n",
-      "Para M=3 e n=4 -> NMSE=-5.584116586787607\n",
-      "Para M=4 e n=1 -> NMSE=-31.30335839782066\n",
-      "Para M=4 e n=2 -> NMSE=-5.184218132063682\n",
-      "Para M=4 e n=3 -> NMSE=-5.977617552887192\n",
-      "Para M=4 e n=4 -> NMSE=-5.2080103360347385\n"
+      "Para M=0 e n=2:\n",
+      "\n",
+      "in_ext (dados de entrada x): \n",
+      " [[0.06874848-0.02982907j]\n",
+      " [0.05495903-0.12721218j]\n",
+      " [0.04307439-0.22773333j]\n",
+      " ...\n",
+      " [0.03853885-0.29324803j]\n",
+      " [0.05741246-0.32447206j]\n",
+      " [0.0849741 -0.34643166j]] \n",
+      "\n",
+      "x_nm: \n",
+      " [[0.05495903-0.12721218j]\n",
+      " [0.04307439-0.22773333j]\n",
+      " [0.03618911-0.32025965j]\n",
+      " ...\n",
+      " [0.02961346-0.25725862j]\n",
+      " [0.03853885-0.29324803j]\n",
+      " [0.05741246-0.32447206j]] \n",
+      "\n",
+      "X_lut: \n",
+      " [[0.03211095-0.07432634j 0.02284808-0.05288584j 0.        +0.j\n",
+      "  0.        +0.j        ]\n",
+      " [0.01312419-0.06938727j 0.02995021-0.15834606j 0.        +0.j\n",
+      "  0.        +0.j        ]\n",
+      " [0.00119809-0.01060268j 0.03499101-0.30965697j 0.        +0.j\n",
+      "  0.        +0.j        ]\n",
+      " ...\n",
+      " [0.00660758-0.05740152j 0.02300588-0.1998571j  0.        +0.j\n",
+      "  0.        +0.j        ]\n",
+      " [0.00434299-0.03304648j 0.03419586-0.26020154j 0.        +0.j\n",
+      "  0.        +0.j        ]\n",
+      " [0.00065814-0.00371953j 0.05675432-0.32075253j 0.        +0.j\n",
+      "  0.        +0.j        ]] \n",
+      "\n",
+      "Formato de s_lut (deve ser (2^n,2*(M+1)): (4, 2) \n",
+      "\n",
+      "NMSE=-33.032138951055096\n",
+      "\n",
+      " ------------------------------------------------------------------- \n",
+      "\n",
+      "Para M=1 e n=2:\n",
+      "\n",
+      "in_ext (dados de entrada x): \n",
+      " [[0.06874848-0.02982907j]\n",
+      " [0.05495903-0.12721218j]\n",
+      " [0.04307439-0.22773333j]\n",
+      " ...\n",
+      " [0.03853885-0.29324803j]\n",
+      " [0.05741246-0.32447206j]\n",
+      " [0.0849741 -0.34643166j]] \n",
+      "\n",
+      "x_nm: \n",
+      " [[0.04307439-0.22773333j 0.05495903-0.12721218j]\n",
+      " [0.03618911-0.32025965j 0.04307439-0.22773333j]\n",
+      " [0.03730185-0.39371625j 0.03618911-0.32025965j]\n",
+      " ...\n",
+      " [0.02961346-0.25725862j 0.03130391-0.22059751j]\n",
+      " [0.03853885-0.29324803j 0.02961346-0.25725862j]\n",
+      " [0.05741246-0.32447206j 0.03853885-0.29324803j]] \n",
+      "\n",
+      "X_lut: \n",
+      " [[0.01312419-0.06938727j 0.02995021-0.15834606j 0.        +0.j\n",
+      "  ... 0.02284808-0.05288584j 0.        +0.j\n",
+      "  0.        +0.j        ]\n",
+      " [0.00119809-0.01060268j 0.03499101-0.30965697j 0.        +0.j\n",
+      "  ... 0.02995021-0.15834606j 0.        +0.j\n",
+      "  0.        +0.j        ]\n",
+      " [0.        +0.j         0.        +0.j         0.        +0.j\n",
+      "  ... 0.03499101-0.30965697j 0.        +0.j\n",
+      "  0.        +0.j        ]\n",
+      " ...\n",
+      " [0.00660758-0.05740152j 0.02300588-0.1998571j  0.        +0.j\n",
+      "  ... 0.02092424-0.14745235j 0.        +0.j\n",
+      "  0.        +0.j        ]\n",
+      " [0.00434299-0.03304648j 0.03419586-0.26020154j 0.        +0.j\n",
+      "  ... 0.02300588-0.1998571j  0.        +0.j\n",
+      "  0.        +0.j        ]\n",
+      " [0.00065814-0.00371953j 0.05675432-0.32075253j 0.        +0.j\n",
+      "  ... 0.03419586-0.26020154j 0.        +0.j\n",
+      "  0.        +0.j        ]] \n",
+      "\n",
+      "Formato de s_lut (deve ser (2^n,2*(M+1)): (4, 4) \n",
+      "\n",
+      "NMSE=-14.349768236497898\n",
+      "\n",
+      " ------------------------------------------------------------------- \n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "for M in range(5):\n",
-    "    for n in range(1,5):\n",
-    "        print(f'Para M={M} e n={n} -> NMSE={identificacao_carolina(in_ext,out_ext,in_val,out_val,M,n)}')"
+    "n=2\n",
+    "for M in range(2):\n",
+    "    print(f'Para M={M} e n={n}:\\n')\n",
+    "    print(f'NMSE={identificacao_carolina(in_ext,out_ext,in_val,out_val,M,n)}')\n",
+    "    print('\\n ------------------------------------------------------------------- \\n')"
    ]
-  },
-  {
-   "source": [
-    "Observando os resultados acima é notável que quando os valores de n e M são menores o modelo apresenta um resultado superior."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
   }
  ]
 }
